# datareporter

./: .dockerignore  .dockerignore.orig  .example.env  .flake8  .gitignore  .gitmodules  .zshrc  2_split_query.example.sql  Dockerfile  Jenkinsfile  Makefile  README.md  SETUP.md  coverage.txt  dev_worker_server.py  docker-compose-main.yml  docker-compose.ci.yml  docker-compose.yml  errors.md  package-lock.json  package.json  project.toml  pylintrc  pyproject.toml  requirements.txt  requirements_all_ds.txt  requirements_dev.txt  test_file.py  test_sub.py  tsconfig.json  version_increase.md  webpack.config.js  webpackold.config.js  wsgi_profiler_conf.py
.build/: build.sh  server.Dockerfile  worker.Dockerfile
.build/builder/: builder.toml
.cd/datareporter/: app.yaml
.ci/: docker-compose.cypress.yml  docker-compose.server.yaml
.circleci/: Dockerfile.cypress  config.yml  docker-compose.circle.yml  docker-compose.cypress.yml
.gcloud/: build-cache.yaml  build-images.yaml  build.sh  deploy.yaml  docker-compose.server.yaml  pinadventures-deploy.yaml  pip-cache.Dockerfile  pre-merge.yaml
.gcould/: build-images.yaml  pinadventures-deploy.yaml
.github/: cloudbuild.yml  dependabot.yml  support.yml
.github/scripts/: next_version.sh
.github/workflows/: build_and_push.yaml  main.yml  pre-merge.yaml  release.yaml  test-unit.yaml
client/: .babelrc  .eslintignore  .eslintrc.js  connect_datareporter_network.md  cypress.config.js  cypress.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json  turnilo  webpack.config.js
client/app/: index.html  modelFake.js  multi_org.html  unsupported.html
client/cypress/: cypress.js  seed-data.js  tsconfig.json
cloud-run/server/: Dockerfile  app.json  prepare
cloud-run/worker/: app.json
kubernetes/: deployment.yaml  hpa.yaml
kubernetes/base/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
migrations/versions/: 0ec979123ba4_.py  11e4489f2123_.py  1234dca2a603_.py  1916fbf3b1eb_.py  20a3aed6b20e_.py  2118f5874142_.py  357f3783f705_.py  3d026330dadd_.py  40a8d5338228_.py  44b116635803_.py  4697bc3b1bf9_.py  640888ce445d_.py  7205816877ec_change_type_of_json_fields_from_varchar_.py  969126bd800f_.py  96ba629490dd_.py  9e8c841d1a30_fix_hash.py  9f4a3f20c1d2_.py  a0bb29c2eb4c_.py  a813195c3fb2_.py  b89fbc8cf4c1_.py  db238f81a5aa_.py  fd4fc850d7ea_.py  febb1459b2c2_.py
nginx/: Dockerfile  nginx.conf
plywood/: Dockerfile  Jenkinsfile  README.md  package-lock.json  package.json
plywood/client/: compile  compile-tsc  package-lock.json  package.json  tsconfig.json
plywood/server/: .dockerignore  .env  .gitignore  .npmrc  Dockerfile  package-lock.json  package.json  tsconfig.json
plywood/src/: app.ts
redash/: __init__.py  app.py  extensions.py  monitor.py  permissions.py  security.py  version_check.py  worker.py
redash-client/: package-lock.json  package.json
redash-client/app/: unsupported.html
redash/authentication/: __init__.py  account.py  google_oauth.py  jwt_auth.py  ldap_auth.py  saml_auth.py
redash/cli/: __init__.py  database.py  groups.py  organization.py  rq.py
redash/destinations/: __init__.py  datadog.py
redash/gcloud/: pubsub.py
redash/handlers/: __init__.py  admin.py  api.py  authentication.py  base.py  dashboards.py  data_source_tables.py  data_sources.py  databricks.py  embed.py  favorites.py  model_configs.py  models.py  queries.py  (+11 more)
scripts/: config.example.js
tests/: __init__.py  factories.py  test_authentication.py  test_cli.py  test_handlers.py  test_models.py  test_permissions.py
viz-lib/: global.d.ts  jsconfig.json  package-lock.json  package.json  webpack.config.js
worker/: wsgi.py
(+957 files in other folders)
