[project]
requires-python = ">=3.8"

[tool.black]
target-version = ['py38']
line-length = 119
force-exclude = '''
/(
  migrations
)/
'''

[tool.poetry]
name = "datareporter"
version = "0.1.0"
description = ""
authors = ["renas <mirkanbaba1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "1.1.1"
jinja2 = "2.11.3"
itsdangerous = "1.1.0"
click = "6.7"
markupsafe = "1.1.1"
pyopenssl = "19.0.0"
httplib2 = "0.19.0"
wtforms = "2.2.1"
flask-restful = "0.3.7"
flask-login = "0.4.1"
flask-oauthlib = "0.9.5"
flask-sqlalchemy = "2.4.1"
flask-migrate = "2.5.2"
flask-mail = "0.9.1"
flask-talisman = "0.7.0"
flask-limiter = "0.9.3"
flask-wtf = "0.14.3"
passlib = "1.7.1"
aniso8601 = "8.0.0"
blinker = "1.4"
psycopg2 = "2.8.3"
python-dateutil = "2.8.0"
pytz = ">=2019.3"
pyyaml = "5.4"
cerberus = "1.3.2"
redis = "3.3.11"
requests = "2.31.0"
sqlalchemy = "1.3.10"
sqlalchemy-searchable = "0.10.6"
pyparsing = "2.4.2"
sqlalchemy-utils = "0.34.2"
sqlparse = "0.4.4"
statsd = "3.3.0"
gunicorn = "20.0.4"
rq = "1.1.0"
rq-scheduler = "0.10.0"
jsonschema = "3.1.1"
restrictedpython = "5.0"
pysaml2 = "6.5.0"
pycrypto = "2.6.1"
funcy = "1.13"
sentry-sdk = ">=0.14.3,<0.15.0"
semver = "2.8.1"
xlsxwriter = "1.2.2"
pystache = "0.6.0"
parsedatetime = "2.4"
pyjwt = "1.7.1"
cryptography = ">=3.4.0"
simplejson = "3.16.0"
ua-parser = "0.8.0"
user-agents = "2.0"
maxminddb-geolite2 = "2018.703"
pypd = "1.1.0"
disposable-email-domains = ">=0.0.52"
gevent = "1.4.0"
sshtunnel = "0.1.5"
supervisor = "4.1.0"
supervisor-checks = "0.8.1"
werkzeug = "0.16.1"
ldap3 = { version = "2.2.4", optional = true }
greenlet = "0.4.16"
mailchimp-marketing = "3.0.36"
inflection = "0.5.1"
mock = "4.0.3"
lzstring = "1.0.4"
pydash = "5.0.1"
python-dotenv = ">=0.21.0"

[tool.poetry.group.all_ds]
optional = true

[tool.poetry.group.all_ds.dependencies]
google-api-python-client = "2.80.0"
google-cloud-pubsub = "2.17.1"
gspread = "3.1.0"
impyla = "0.16.0"
influxdb = "5.2.3"
mysqlclient = "1.3.13"
oauth2client = "3.0.0"
pyhive = "0.6.1"
pymongo = "3.9.0"
vertica-python = "0.9.5"
td-client = "1.0.0"
#pymssql = "2.1.4"
#dql = "0.6.1"
dynamo3 = "1.0.0"
boto3 = ">=1.10.0,<1.18.0"
botocore = ">=1.13.0,<1.21.0"
sasl = ">=0.1.3"
thrift = ">=0.8.0"
thrift_sasl = ">=0.1.0"
cassandra-driver = "3.21.0"
memsql = "3.0.0"
atsd_client = "3.0.5"
simple_salesforce = "0.74.3"
PyAthena = "1.10.6"
pymapd = "0.19.0"
qds-sdk = ">=1.9.6"
ibm-db = ">=2.0.9"
pydruid = "0.5.7"
requests_aws_sign = "0.1.5"
snowflake-connector-python = "3.0.2"
phoenixdb = "0.7"
# certifi is needed to support MongoDB and SSL:
certifi = ">=2019.9.11"
pydgraph = "2.0.2"
azure-kusto-data = "1.0.3"
pyexasol = "0.12.0"
python-rapidjson = "0.8.0"
pyodbc = "4.0.28"

[tool.poetry.group.ldap3]
optional = true

[tool.poetry.group.ldap3.dependencies]
ldap3 = "2.2.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "5.2.1"
pytest-cov = "2.8.1"
coverage = "4.5.4"

# PyMongo and Athena dependencies are needed for some of the unit tests:
# (this is not perfect and we should resolve this in a different way)
pymongo = "3.9.0"
botocore = ">=1.13.0,<1.21.0"
PyAthena = "1.10.6"
ptvsd = "4.3.2"
freezegun = "0.3.12"
watchdog = "0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".git", "viz-lib", "node_modules", "migrations"]
ignore = ["E501"]
select = ["C9", "E", "F", "W", "I001"]

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
